Add Settings user role management
